# contracts-osmosis

./: .gitignore  Cargo.toml  README.md
contracts/update-scaling-factor/: Cargo.toml
contracts/update-scaling-factor/examples/: schema.rs
contracts/update-scaling-factor/src/: contract.rs  error.rs  msg.rs
scripts/: build_schema.sh  package-scripts.js  package.json
