[package]
name = "eris-update-scaling-factor"
version = "1.0.0"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-std = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = "0.13.2"
cw-ownable = "0.5.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

osmosis-std = "0.16.0"
eris = { git = "https://github.com/erisprotocol/contracts-tokenfactory.git", default-features = false, rev = "f38bd370400dd9873e6872538ee10e3602b19684" }


[dev-dependencies]
cw-multi-test = "0.15.1"
